apps/prowlarr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      containers:
        - name: prowlarr
          image: linuxserver/prowlarr@sha256:761f73534a01aec4bf72a1396e9b9fda3f01632948b3fa31985982d26120a330
          ports:
            - containerPort: 9696
          volumeMounts:
            - name: config-volume
              mountPath: /config
              subPath: prowlarr
      volumes:
        - name: config-volume
          persistentVolumeClaim:
            claimName: nfs-pvc
